k8s-3/server-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: server-deployment
spec: 
    replicas: 1
    selector: 
        matchLabels:
            component: server
    template: 
        metadata: 
            labels: 
                component: server
        spec: 
            containers: 
                - name: server
                  image: bnagaraja9099/multi-server
                  ports: 
                    - containerPort: 5000
